--- a/planning/determination_control_values/package.xml
+++ b/planning/determination_control_values/package.xml
@@ -17,6 +17,7 @@
   <depend>rclcpp_components</depend>
   <depend>tier4_planning_msgs</depend>
   <depend>seonsor_msgs</depend>
+  <depend>nav_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
