--- a/planning/determination_control_values/package.xml
+++ b/planning/determination_control_values/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="keita.miura@tier4.jp">emb4</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>autoware_cmake</build_depend>
 
   <depend>autoware_auto_perception_msgs</depend>
   <!-- <depend>tier4_autoware_utils</depend> -->
@@ -16,7 +16,7 @@
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>tier4_planning_msgs</depend>
-  <depend>seonsor_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
