feat(determination_control_values): add detecion area

--- a/planning/determination_control_values/config/determination_control_values.param.yaml
+++ b/planning/determination_control_values/config/determination_control_values.param.yaml
@@ -2,3 +2,7 @@
   ros__parameters:
     detection_margin_min: 1.0
     detection_margin_max: 3.0
+    detection_area_front: 3.0
+    detection_area_rear: 0.0
+    detection_area_left: 2.0
+    detection_area_right: 2.0
