feat(determination_control_values): add detecion pointcloud

--- a/planning/determination_control_values/CMakeLists.txt
+++ b/planning/determination_control_values/CMakeLists.txt
@@ -4,11 +4,15 @@ project(determination_control_values)
 find_package(autoware_cmake REQUIRED)
 autoware_package()
 
+find_package(eigen3_cmake_module REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(PCL REQUIRED COMPONENTS common)
+
 ament_auto_add_library(determination_control_values SHARED
   src/determination_control_values_node.cpp
 )
 
-target_link_libraries(determination_control_values)
+target_link_libraries(determination_control_values ${PCL_LIBRARIES})
 
 rclcpp_components_register_node(determination_control_values
   PLUGIN "motion_planning::DeterminationControlValues"
