--- a/planning/determination_control_values/package.xml
+++ b/planning/determination_control_values/package.xml
@@ -18,6 +18,8 @@
   <depend>tier4_planning_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
+  <depend>pcl_conversions</depend>
+  <depend>tf2_eigen</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
