--- a/planning/determination_control_values/config/determination_control_values.param.yaml
+++ b/planning/determination_control_values/config/determination_control_values.param.yaml
@@ -2,10 +2,11 @@
   ros__parameters:
     detection_objects: false
     detection_points: true
+    is_publishing_debug_detection_area: true
     detection_margin_min: 1.0
     detection_margin_max: 3.0
     detection_area_front: 3.0
     detection_area_rear: 0.0
     detection_area_left: 2.0
     detection_area_right: 2.0
-    detection_point_num_min: 100
+    detection_point_num_min: 1000
